--- a/playshop/package.json
+++ b/playshop/package.json
@@ -27,7 +27,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "http://takashiw.github.io/Playshop-LandingSite",
+  "homepage": "http://workshops.ideoplaylab.com",
   "devDependencies": {
     "gh-pages": "^2.0.1"
   }
